# MiChat

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: build.yml
Backend/: .env.example  main.py  pyproject.toml
Backend/MiChatAPI/: .env.example  Makefile  main.py  pyproject.toml
Backend/MiChatAPI/alembic/: env.py
Backend/MiChatAPI/alembic/versions/: 6371879b0f58_.py  ff91eb72ddd1_initial.py
Backend/MiChatAPI/app/cfg/: settings.py
Backend/MiChatAPI/app/database/: database.py
Backend/MiChatAPI/app/database/abstract/: abc_repository.py
Backend/MiChatAPI/app/database/models/: models.py
Backend/MiChatAPI/app/database/repository/: profile_repository.py  user_repository.py
Backend/MiChatAPI/app/routers/: access_router.py  account_router.py  main_router.py
Backend/MiChatAPI/app/schemas/account/: checkUsernameRequest.py  profile.py  users.py
Backend/MiChatAPI/app/schemas/get_access/: authorize.py  register.py
Backend/MiChatAPI/app/security/: hasher.py  jwtmanager.py  jwttype.py
Backend/MiChatAPI/app/services/: profile_services.py  user_services.py
Backend/alembic/: env.py
Backend/alembic/versions/: 02fed585ba9f_.py  0cc12db8114e_.py  1e95d4565cc7_.py  26573b7a7a81_.py  329712734055_.py  41fa701defdb_.py  4223afbad69f_.py  44aea3198e78_.py  7069eca0cc52_.py  7a8a7d47b0a4_.py  (+3 more)
Backend/docker/: Dockerfile  docker-compose.yml
Frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
Frontend/docker/: Dockerfile.frontend  docker-compose.frontend.yml
Frontend/src/: App.tsx  Router.tsx  index.css
(+83 files in other folders)
